--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react",
   "version": "1.0.0",
+  "homepage": "https://sanidhya004.github.io/Fitepo",
   "description": "React example starter project",
   "keywords": [
     "react",
@@ -15,6 +16,7 @@
     "@mui/material": "5.14.13",
     "antd": "^5.10.0",
     "chart.js": "^4.4.0",
+    "gh-pages": "^6.0.0",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -27,6 +29,8 @@
     "typescript": "4.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
